{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 11,
  "lineage": "a31d267e-ec21-4b41-3e96-68749f44f337",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0952923987aacac22",
            "domain": "vpc",
            "id": "eipalloc-0952923987aacac22",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-147-13-82.compute-1.amazonaws.com",
            "public_ip": "54.147.13.82",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f7e7f6c2f40dc1",
            "arn": "arn:aws:ec2:us-east-1:430704357939:instance/i-05d289074c474281a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d289074c474281a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06a35cc55c9a00122",
            "private_dns": "ip-192-168-0-232.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01ececf894d7580e2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fbdeed911ec6b1bc",
            "tags": {
              "Name": "mahmuda-priv-EC2"
            },
            "tags_all": {
              "Name": "mahmuda-priv-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1af90233b8e2465"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_subnet.privsub_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:internet-gateway/igw-01935de201a6ffa2c",
            "id": "igw-01935de201a6ffa2c",
            "owner_id": "430704357939",
            "tags": {
              "Name": "pubsub-1-igw"
            },
            "tags_all": {
              "Name": "pubsub-1-igw"
            },
            "vpc_id": "vpc-0e10c1143b07f9492"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0952923987aacac22",
            "association_id": "eipassoc-0951d2bd352b18e8a",
            "connectivity_type": "public",
            "id": "nat-09c2c5890c695e3a5",
            "network_interface_id": "eni-0df18fa35fbef6759",
            "private_ip": "192.168.0.92",
            "public_ip": "54.147.13.82",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0222b33266c1d0dc9",
            "tags": {
              "Name": "mahmuda-nat-gateway"
            },
            "tags_all": {
              "Name": "mahmuda-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_subnet.pubsub_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privsub-1-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:route-table/rtb-0eaa7a2d8165a3413",
            "id": "rtb-0eaa7a2d8165a3413",
            "owner_id": "430704357939",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09c2c5890c695e3a5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-1-rt"
            },
            "tags_all": {
              "Name": "private-1-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e10c1143b07f9492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.ngw",
            "aws_subnet.pubsub_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsub_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cff1bb841792ccca",
            "route_table_id": "rtb-0eaa7a2d8165a3413",
            "subnet_id": "subnet-0fbdeed911ec6b1bc"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.ngw",
            "aws_route_table.privsub-1-rt",
            "aws_subnet.privsub_1",
            "aws_subnet.pubsub_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:security-group/sg-0a1af90233b8e2465",
            "description": "VPC SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and Ports outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1af90233b8e2465",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc-ssh",
            "name_prefix": "",
            "owner_id": "430704357939",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e10c1143b07f9492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:subnet/subnet-0fbdeed911ec6b1bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbdeed911ec6b1bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "430704357939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-0e10c1143b07f9492"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:subnet/subnet-0222b33266c1d0dc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0222b33266c1d0dc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "430704357939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0e10c1143b07f9492"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:430704357939:vpc/vpc-0e10c1143b07f9492",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-0a80ad5fd0ad1c57f",
            "default_route_table_id": "rtb-0cbd4ceeae77b216a",
            "default_security_group_id": "sg-0e2f6880f8200a7e1",
            "dhcp_options_id": "dopt-0b9ceb20cd0988fd9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e10c1143b07f9492",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cbd4ceeae77b216a",
            "owner_id": "430704357939",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}